# hero

./: .dockerignore  .gitignore  .taplo.toml  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile.base  README.md  docker-compose-relay.yaml  docker-compose.yml  rococo-local-parachain-2000-raw.json  rococo-local-parachain-plain.json
.github/: pull_request_template.md
.github/workflows/: build.yml  ci.yml
docs/: README.md  architecture.md  hardware.md  integration_test.md  os.md  storage.md  upgrade-substrate.md  zombienet.md
docs/architecture/: architecture.md  glossary.md  stage-00.md  stage-01.md
docs/basics/: rust.md  upgrade-substrate.md
docs/feature_spec/: smart_agreement.md
docs/testing/: evm.md  frontier_test.md  hardhat.config.ts  integration_test.md
examples/: README.md
examples/hardhat/Incrementer/: .env_example  .gitignore  README.md  hardhat.config.ts  package.json
examples/hardhat/Incrementer/contracts/: Incrementer.sol
examples/hardhat/Incrementer/deployment/hardhat/: deploy.ts
examples/hardhat/Incrementer/deployment/testnet/paidchain/: deploy.ts
examples/truffle/: .env_example  package.json  truffle-config.js
examples/truffle/contracts/: sample.sol
examples/truffle/migrations/: 2_deploy_contracts.js
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  primitives.rs  rpc.rs  service.rs
pallets/bridge/: Cargo.toml
pallets/bridge/src/: lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/crowdloan-rewards/: Cargo.toml
pallets/crowdloan-rewards/src/: benchmarks.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/erc721/: Cargo.toml
pallets/erc721/src/: lib.rs  mock.rs  tests.rs
pallets/escrow/: Cargo.toml
pallets/escrow/.cargo/: config.toml
pallets/escrow/src/: lib.rs  mock.rs  tests.rs
pallets/feeless/: Cargo.toml
pallets/feeless/src/: info_types.rs  lib.rs  mock.rs  tests.rs
pallets/parachain-staking/: Cargo.toml  README.md
pallets/parachain-staking/src/: benchmarks.rs  delegation_requests.rs  inflation.rs  lib.rs  mock.rs  set.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/smart_agreement/: Cargo.toml
pallets/smart_agreement/src/: benchmarking.rs  info_types.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/testing/: Cargo.toml
pallets/testing/src/: lib.rs  mock.rs  tests.rs
polkadot-launch/: config.json
res/: paid-testnet.json  rococo-custom-2-raw.json  rococo-private-relay.json  rococo-raw-bootnodes.json
runtime/: Cargo.toml
runtime-common/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs
runtime/src/: impl_runtime_api.rs  lib.rs  precompiles.rs  pub_consts.rs  runtime_pallet_impl.rs  type_alias.rs  type_alias_and_consts.rs  xcm_config.rs
scripts/: destroy_test_relay.sh  docker-compose-cloud-setup.yaml  docker-compose-collator.yaml  init.sh
test-utils/client/: Cargo.toml
test-utils/client/src/: lib.rs
zombienet_tests/smoke/: simple-network.feature  simple-network.toml
