[profile.release]
panic = "unwind"

[workspace]
members = [
	"node",
	"pallets/*",
	"runtime",
	"runtime/common"
]


[patch."https://github.com/paritytech/frontier"] # Sometines this patch template will be required (depending on the version of polkadot)
pallet-evm =                     { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }
pallet-ethereum =                { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }
pallet-evm-precompile-simple =   { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }
pallet-evm-precompile-sha3fips = { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }
pallet-evm-precompile-modexp =   { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }

fp-self-contained =              { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }
fp-rpc =                         { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }
fp-storage =                     { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }
fp-evm =                         { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }
fp-consensus =                   { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }

fc-db =                          { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }
fc-mapping-sync =                { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }
fc-rpc =                         { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }
fc-rpc-core =                    { git = "https://github.com/PAIDNetwork/frontier", branch = "patch-polkadot-v0.9.24" }

