[package]
name = "hero"
version = "0.0.1"
authors = ["PAID Network DevHub <https://github.com/PAIDNetwork>"]
build = "build.rs"
description = "Hero is a Polkadot parachain on which can deploy solidity smart contracts."
edition = "2021"
homepage = "https://paidnetwork.com/"
license = "Unlicense"
publish = false
repository = "https://github.com/PAIDNetwork/hero"

[[bin]]
name = "hero"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
derive_more = "0.99.2"
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.1", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
hex-literal = "0.3.4"
structopt = "0.3.8"
serde_json = "1.0"
futures = "0.3.1"
zeroize = "1.4.3"

# RPC related Dependencies
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpsee = { version = "0.13.0", features = ["server", "macros"] }

# Local Parachain Runtime
hero-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking =             { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
frame-benchmarking-cli =         { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

# Substrate Client Dependencies
sc-basic-authorship =     { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-chain-spec =           { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-cli =                  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", features = ["wasmtime"] }
sc-client-api =           { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-consensus =            { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-executor =             { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", features = ["wasmtime"] }
sc-keystore =             { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-network =              { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-rpc =                  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-rpc-api =              { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-service =              { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", features = ["wasmtime"] }
sc-telemetry =            { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-tracing =              { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-transaction-pool =     { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-sysinfo =              { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

# Substrate Primitive Dependencies
sp-api =                        { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-block-builder =              { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-blockchain =                 { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-consensus =                  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-consensus-aura =             { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-core =                       { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-inherents =                  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-keystore =                   { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-offchain =                   { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-runtime =                    { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-session =                    { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-timestamp =                  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-transaction-pool =           { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
substrate-frame-rpc-system =    { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
try-runtime-cli =               { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

# Polkadot Dependencies
polkadot-cli =        { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
polkadot-parachain =  { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
polkadot-service =    { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
xcm =                 { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }

# Cumulus Dependencies
cumulus-client-cli =                      { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-collator =                 { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-consensus-aura =           { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-consensus-common =         { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-network =                  { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-service =                  { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-primitives-core =                 { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-primitives-parachain-inherent =   { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-relay-chain-interface =           { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-relay-chain-rpc-interface =       { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }

#Frontier
fp-rpc =          { git = "https://github.com/paritytech/frontier", branch = "master" }
fp-storage =      { git = "https://github.com/paritytech/frontier", branch = "master" }
fp-evm =          { git = "https://github.com/paritytech/frontier", branch = "master" }

fc-db =           { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-rpc =          { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-rpc-core =     { git = "https://github.com/paritytech/frontier", branch = "master" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

[features]
runtime-benchmarks = [
	"hero-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = ["hero-runtime/try-runtime"]
