[package]
name = "hero"
version = "0.0.1"
authors = ["PAID Network DevHub <https://github.com/PAIDNetwork>"]
build = "build.rs"
description = "Hero is a Polkadot parachain on which can deploy solidity smart contracts."
edition = "2021"
homepage = "https://paidnetwork.com/"
license = "Unlicense"
publish = false
repository = "https://github.com/PAIDNetwork/hero"

[[bin]]
name = "hero"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "3.2.5", features = ["derive"] }
derive_more = "0.99.2"
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.1", features = [
	"derive",
] }
serde = { version = "1.0.137", features = ["derive"] }
hex-literal = "0.3.4"
structopt = "0.3.8"
serde_json = "1.0"
futures = "0.3.21"
zeroize = "1.4.3"
url = "2.2.2"
tracing-core = "0.1.26"

# RPC related Dependencies
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }

# Local Parachain Runtime
hero-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

# Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", features = [
	"wasmtime",
] }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", features = [
	"wasmtime",
] }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", features = [
	"wasmtime",
] }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

# Substrate Primitive Dependencies
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

# Polkadot Dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25", default-features = false, features = [
	"wasmtime",
	"db",
	"cli",
	"full-node",
	"trie-memory-tracker",
	"polkadot-native",
] }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
parachain-staking = { path = "../pallets/parachain-staking", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25", default-features = false }

# Cumulus Dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25" }

#Frontier
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "master" }
fp-storage = { git = "https://github.com/paritytech/frontier", branch = "master" }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "master" }

fc-db = { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "master" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

[features]
runtime-benchmarks = [
	"hero-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = ["hero-runtime/try-runtime"]
