[package]
name = "hero"
version = "0.0.1"
authors = [ "PAID Network DevHub <https://github.com/PAIDNetwork>" ]
build = "build.rs"
description = "Hero is a Polkadot parachain on which can deploy solidity smart contracts."
edition = "2021"
homepage = "https://paidnetwork.com/"
license = "Unlicense"
publish = false
repository = "https://github.com/PAIDNetwork/hero"

[[bin]]
name = "hero"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "3.2.5", features = [ "derive" ] }
derive_more = "0.99.2"
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.1", features = [
	"derive",
] }
serde = { version = "1.0.137", features = [ "derive" ] }
hex-literal = "0.3.4"
structopt = "0.3.8"
serde_json = "1.0"
futures = "0.3.21"
zeroize = "1.4.3"
url = "2.2.2"
tracing-core = "0.1.26"

# RPC related Dependencies
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpsee = { version = "0.14.0", features = [ "server", "macros" ] }

# Local Parachain Runtime
hero-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

# Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", features = [
	"wasmtime",
] }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", features = [
	"wasmtime",
] }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", features = [
	"wasmtime",
] }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

# Substrate Primitive Dependencies
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keyring = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
# These dependencies are used for runtime benchmarking
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

# Polkadot Dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false, features = [
	"wasmtime",
	"db",
	"cli",
	"full-node",
	"trie-memory-tracker",
	"polkadot-native",
] }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
parachain-staking = { path = "../pallets/parachain-staking", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false }

# Cumulus Dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }

#Frontier
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.27" }
fp-storage = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.27" }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.27" }

fc-db = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.27" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.27" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.27" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.27" }

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

[features]
runtime-benchmarks = [
	"hero-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [ "hero-runtime/try-runtime" ]